{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 120,
  "lineage": "7754f771-a441-f273-3a61-6b3778d3bde2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:671517741121:instance/i-0a6f0fdf83b281fda",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6f0fdf83b281fda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ops-train-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0373d4687c7b75b51",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d541002f96ed6cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-038476d52ea161b31"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f05880de6886e8c",
            "tags": {
              "Name": "app_server",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "app_server",
              "application": "opstrain"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038476d52ea161b31"
            ]
          },
          "dependencies": [
            "module.ec2-sg.aws_security_group.opstrain-ec2-sg",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "opstrain-ec2-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:671517741121:instance/i-021484a49eaafd969",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021484a49eaafd969",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ops-train-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b2b669ca626f629",
            "private_dns": "ip-10-0-10-252.ec2.internal",
            "private_ip": "10.0.10.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a413f2fb0065ac6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-038476d52ea161b31"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4f835af76426186",
            "tags": {
              "Name": "opstrain-ec2-private1",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-ec2-private1",
              "application": "opstrain"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038476d52ea161b31"
            ]
          },
          "dependencies": [
            "module.ec2-sg.aws_security_group.opstrain-ec2-sg",
            "module.vpc.aws_subnet.opstrain-private1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opstrain-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:security-group/sg-038476d52ea161b31",
            "description": "HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038476d52ea161b31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "opstrain",
            "name_prefix": "",
            "owner_id": "671517741121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "opstrain-ec2-sg",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-ec2-sg",
              "application": "opstrain"
            },
            "timeouts": null,
            "vpc_id": "vpc-068671a1713090453"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "opstrain-ec2-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dc1a62ff293b8552",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-126-124.compute-1.amazonaws.com",
            "public_ip": "18.209.126.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "opstrain-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d92bd4e61d7528d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-128-36.compute-1.amazonaws.com",
            "public_ip": "52.22.128.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "opstrain-internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:internet-gateway/igw-022721651723a26d5",
            "id": "igw-022721651723a26d5",
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-internetgw",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-internetgw",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "opstrain-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d92bd4e61d7528d6",
            "connectivity_type": "public",
            "id": "nat-0535b6138d7c3556c",
            "network_interface_id": "eni-0b53cd64bd2434e97",
            "private_ip": "10.0.1.60",
            "public_ip": "52.22.128.36",
            "subnet_id": "subnet-05f05880de6886e8c",
            "tags": {
              "Name": "opstrain-natgw",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-natgw",
              "application": "opstrain"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.opstrain-eip",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "opstrain-rtpri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:route-table/rtb-06b39e8f52417efb1",
            "id": "rtb-06b39e8f52417efb1",
            "owner_id": "671517741121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0535b6138d7c3556c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opstrain-rtpri",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-rtpri",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.opstrain-eip",
            "module.vpc.aws_nat_gateway.opstrain-natgw",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "opstrain-rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:route-table/rtb-0c0db2776719c139a",
            "id": "rtb-0c0db2776719c139a",
            "owner_id": "671517741121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022721651723a26d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opstrain-rtpub",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-rtpub",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.opstrain-internetgw",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0512b05b173b484d4",
            "route_table_id": "rtb-06b39e8f52417efb1",
            "subnet_id": "subnet-0d4f835af76426186"
          },
          "dependencies": [
            "module.vpc.aws_eip.opstrain-eip",
            "module.vpc.aws_nat_gateway.opstrain-natgw",
            "module.vpc.aws_route_table.opstrain-rtpri",
            "module.vpc.aws_subnet.opstrain-private1",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd22aecdf04eb3e1",
            "route_table_id": "rtb-06b39e8f52417efb1",
            "subnet_id": "subnet-0dee5b46ad28ad8d3"
          },
          "dependencies": [
            "module.vpc.aws_eip.opstrain-eip",
            "module.vpc.aws_nat_gateway.opstrain-natgw",
            "module.vpc.aws_route_table.opstrain-rtpri",
            "module.vpc.aws_subnet.opstrain-private2",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapri3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035bd6834c971d25b",
            "route_table_id": "rtb-06b39e8f52417efb1",
            "subnet_id": "subnet-0f3d0c0cb508bdeec"
          },
          "dependencies": [
            "module.vpc.aws_eip.opstrain-eip",
            "module.vpc.aws_nat_gateway.opstrain-natgw",
            "module.vpc.aws_route_table.opstrain-rtpri",
            "module.vpc.aws_subnet.opstrain-private3",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55896e18c5c4e93",
            "route_table_id": "rtb-0c0db2776719c139a",
            "subnet_id": "subnet-05f05880de6886e8c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.opstrain-internetgw",
            "module.vpc.aws_route_table.opstrain-rtpub",
            "module.vpc.aws_subnet.opstrain-public1",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c92c052acf8e2f",
            "route_table_id": "rtb-0c0db2776719c139a",
            "subnet_id": "subnet-01741e24c490cb7ac"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.opstrain-internetgw",
            "module.vpc.aws_route_table.opstrain-rtpub",
            "module.vpc.aws_subnet.opstrain-public2",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opstrain-rtapub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0262207846c0f9a6f",
            "route_table_id": "rtb-0c0db2776719c139a",
            "subnet_id": "subnet-094950557abc0621b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.opstrain-internetgw",
            "module.vpc.aws_route_table.opstrain-rtpub",
            "module.vpc.aws_subnet.opstrain-public3",
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-0d4f835af76426186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0d4f835af76426186",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-private1",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-private1",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-0dee5b46ad28ad8d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0dee5b46ad28ad8d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-private2",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-private2",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-0f3d0c0cb508bdeec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0f3d0c0cb508bdeec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-private3",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-private3",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-05f05880de6886e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05f05880de6886e8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-public1",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-public1",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-01741e24c490cb7ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01741e24c490cb7ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-public2",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-public2",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opstrain-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:subnet/subnet-094950557abc0621b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-094950557abc0621b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-public3",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-public3",
              "application": "opstrain"
            },
            "vpc_id": "vpc-068671a1713090453"
          },
          "dependencies": [
            "module.vpc.aws_vpc.opstrain-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "opstrain-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671517741121:vpc/vpc-068671a1713090453",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfe3873f6190bd20",
            "default_route_table_id": "rtb-04e4a9f96d8ce5060",
            "default_security_group_id": "sg-0e3c2f9518d3f646d",
            "dhcp_options_id": "dopt-8db68df7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-068671a1713090453",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e4a9f96d8ce5060",
            "owner_id": "671517741121",
            "tags": {
              "Name": "opstrain-vpc",
              "application": "opstrain"
            },
            "tags_all": {
              "Name": "opstrain-vpc",
              "application": "opstrain"
            }
          }
        }
      ]
    }
  ]
}